home page completed, fixed settings storing in localStorage, changed gap between groups in circuits menu

--- a/UI/src/CSS/hello-page.css
+++ b/UI/src/CSS/hello-page.css
@@ -1,7 +1,27 @@
 @keyframes fadeUp {
   0% {
     opacity: 0;
-    transform: translateY(80px);
+    transform: translateY(100px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes backdropDisappear {
+  0% {
+    background-color: black;
+  }
+  100% {
+    background-color: transparent;
+  }
+}
+
+@keyframes fadeDown {
+  0% {
+    opacity: 0;
+    transform: translateY(-70px);
   }
   100% {
     opacity: 1;
@@ -14,10 +34,12 @@
 }
 
 .whole-page {
-  height: 3500px;
+  /*height: 3500px;*/
+  color: white;
 }
 
 .hello-header {
+  opacity: 0;
   position: fixed;
   top: 0;
   width: 100%;
@@ -25,15 +47,16 @@
   display: flex;
   align-items: center;
   background-color: transparent;
-  transition:
-    background-color 0.3s ease,
-    box-shadow 0.3s ease,
-    border-bottom 0.3s ease;
+  transition: background-color 0.3s ease,
+  box-shadow 0.3s ease,
+  border-bottom 0.3s ease;
   z-index: 1000;
   border-bottom: rgba(50, 50, 50, 0) 1px solid;
 
+  animation: fadeDown var(--hello-animation-time) cubic-bezier(0, 0, 0, 1) forwards;
+
   &.scrolled {
-    background-color: rgba(10, 10, 10, 0.2);
+    background-color: rgba(0, 0, 0, 0.2);
     backdrop-filter: blur(10px);
     border-bottom: rgba(50, 50, 50, 0.3) 1px solid;
   }
@@ -41,6 +64,7 @@
 
 .hello-logo-name {
   margin-left: 40px;
+  font-weight: 600;
   color: white;
   font-size: 24px;
 }
@@ -54,15 +78,18 @@
   width: 120px;
   height: 40px;
   color: #ffffff;
-  font-size: 0.95rem;
+  font-size: 14px;
   text-align: center;
   margin-right: 10px;
-  border-radius: 8px;
-  border: 1px hsla(0, 0%, 20%, 0) solid;
-  transition: 0.15s;
+  border-radius: 6px;
+  border: 1px solid rgba(40, 40, 40, 0.6);
+  background-color: rgba(0, 0, 0, 0.2);
+  transition: 0.2s;
 
   &:hover {
-    border: 1px hsla(0, 0%, 30%, 30%) solid;
+    background-color: rgba(0, 0, 0, 0.1);
+    transition: 0.1s;
+    border: 1px rgba(40, 40, 40, 0.5) solid;
     color: #989898;
   }
 }
@@ -83,7 +110,7 @@
     word-wrap: break-word;
     position: relative;
     opacity: 0;
-    animation: fadeUp 0.8s cubic-bezier(0,0,0,1) forwards;
+    animation: fadeUp var(--hello-animation-time) cubic-bezier(0, 0, 0, 1) forwards;
     animation-delay: 0.05s;
   }
 
@@ -92,7 +119,7 @@
     margin-top: 15px;
     color: hsl(220, 40%, 60%);
     opacity: 0;
-    animation: fadeUp 0.8s cubic-bezier(0,0,0,1) forwards;
+    animation: fadeUp var(--hello-animation-time) cubic-bezier(0, 0, 0, 1) forwards;
     animation-delay: 0.1s;
   }
 }
@@ -108,42 +135,46 @@
 }
 
 
-.backdrop-whole-page{
-  background-color: transparent;
+.backdrop-whole-page {
+  background-color: black;
   position: fixed;
   width: 100vw;
   height: 100vh;
   transition: 0.3s;
+  animation: backdropDisappear var(--hello-animation-time) linear forwards;
+  animation-delay: 0.08s;
+
 
   &.active {
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.6);
     transition: 0.3s;
   }
 
 }
-.sticky-wrapper{
-  height: 1400px;
+
+.sticky-wrapper {
+  height: 1000px;
   position: relative;
-  border-bottom: white 1px solid;
 }
-.sticky-container{
-    flex-direction: row;
-    color: white;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    gap: 4vw;
-    flex-wrap: wrap;
-    padding: 0 40px;
-    align-items: stretch;
-    height: 60vh;
+
+.sticky-container {
+  flex-direction: row;
+  color: white;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  gap: 4vw;
+  flex-wrap: wrap;
+  padding: 0 40px;
+  align-items: stretch;
+  height: 60vh;
 
 }
 
 .hello-image-placeholder {
   background-color: rgba(20, 20, 20, 0.3);
   backdrop-filter: blur(10px);
-  border: rgba(50, 50, 50, 0.5) 1px solid;
+  border: rgba(40, 40, 40, 0.5) 1px solid;
   border-radius: 1.5rem;
   box-sizing: border-box;
   overflow: hidden;
@@ -157,7 +188,7 @@
   align-self: flex-start;
   margin: auto 0;
   opacity: 0;
-  animation: fadeUp 0.8s cubic-bezier(0,0,0,1) forwards;
+  animation: fadeUp var(--hello-animation-time) cubic-bezier(0, 0, 0, 1) forwards;
   animation-delay: 0.2s;
 }
 
@@ -193,17 +224,17 @@
 }
 
 .sticky-icon {
-  width: 1.5rem;
+  width: 24px;
   margin-right: 10px;
 }
 
 .appear-block-title {
-  font-size: 1.6rem;
+  font-size: 24px;
   color: hsl(235, 40%, 100%);
 }
 
 .appear-block-description {
-  font-size: 1rem;
+  font-size: 16px;
   font-weight: 400;
   color: hsl(220, 40%, 70%);
 }
@@ -211,9 +242,8 @@
 .appear-animate-left {
   opacity: 0;
   transform: translateX(-30vh);
-  transition:
-    opacity 0.6s ease-out,
-    transform 0.6s ease-out;
+  transition: opacity 0.6s ease-out,
+  transform 0.6s ease-out;
   will-change: transform, opacity;
 
   &.visible {
@@ -225,9 +255,8 @@
 .appear-animate-right {
   opacity: 0;
   transform: translateX(30vh);
-  transition:
-    opacity 0.6s ease-out,
-    transform 0.6s ease-out;
+  transition: opacity 0.6s ease-out,
+  transform 0.6s ease-out;
   will-change: transform, opacity;
 
   &.visible {
@@ -236,12 +265,71 @@
   }
 }
 
+.try-it-wrapper {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 20px;
+
+  & > p {
+    opacity: 0;
+    animation: cubic-bezier(0, 0, 0, 1) fadeUp var(--hello-animation-time) forwards;
+  }
+}
+
+.try-it-button {
+  opacity: 0;
+  animation: cubic-bezier(0, 0, 0, 1) fadeUp var(--hello-animation-time) forwards;
+  animation-delay: 0.05s;
+  margin: 20px 10px 0 0;
+  z-index: 100;
+  padding: 14px 26px;
+  font-size: 18px;
+  border-radius: 6px;
+  border: 1px solid rgba(40, 40, 40, 0.6);
+  background-color: rgba(0, 0, 0, 0.3);
+  transition: 0.2s;
+  color: white;
+
+  &:hover {
+    background-color: rgba(0, 0, 0, 0.1);
+    transition: 0.1s;
+    border: 1px rgba(40, 40, 40, 0.5) solid;
+    color: #989898;
+  }
+}
+
+
 .hello-footer {
+  /*opacity: 0;*/
   bottom: 0;
-  background-color: rgba(10, 10, 10, 0.5);
+  background-color: rgba(0, 0, 0, 0.5);
   backdrop-filter: blur(10px);
-  padding: 80px 40px;
+  padding: 30px 0 20px 0;
   text-align: center;
   color: white;
   border-top: rgba(50, 50, 50, 0.3) 1px solid;
+}
+
+.footer-links {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+
+  & > a {
+    font-size: 16px;
+
+    text-decoration: underline;
+    color: white;
+    transition: color 0.3s ease;
+    margin: 0 0 10px 0;
+
+    &:hover {
+      color: #ccc;
+    }
+  }
 }
